--- a/treasure-hunt/package.json
+++ b/treasure-hunt/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-compound-timer": "^1.1.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
