--- a/treasure-hunt/package.json
+++ b/treasure-hunt/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
+    "eslint-utils": "^1.4.3",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "react": "^16.8.6",
     "react-compound-timer": "^1.1.3",
     "react-dom": "^16.8.6",
